@@ -141,9 +141,6 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>14</release>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -183,9 +180,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
         </plugins>
         <finalName>app</finalName>
